--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -8,6 +8,12 @@ android {
         targetSdkVersion 28
         versionCode 107
         versionName "2.007"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ eventBusIndex : 'com.wow.carlauncher.common.MyEventBusIndex' ]
+            }
+        }
     }
     buildTypes {
         release {
@@ -56,4 +62,6 @@ dependencies {
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.github.goweii:AnyPermission:1.1.0'
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:2.0.24'
+
+    annotationProcessor 'org.greenrobot:eventbus-annotation-processor:3.1.1'
 }
