--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -11,7 +11,7 @@ android {
 
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = [ eventBusIndex : 'com.wow.carlauncher.common.MyEventBusIndex' ]
+                arguments = [eventBusIndex: 'com.wow.carlauncher.common.MyEventBusIndex']
             }
         }
     }
@@ -48,9 +48,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'io.github.meetsl:SCardView:1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'org.xutils:xutils:3.5.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
@@ -62,6 +62,8 @@ dependencies {
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.github.goweii:AnyPermission:1.1.0'
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:2.0.24'
+    implementation 'com.jakewharton:butterknife:8.8.1'
 
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     annotationProcessor 'org.greenrobot:eventbus-annotation-processor:3.1.1'
 }
