--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -67,12 +67,14 @@ dependencies {
     //权限检查
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:2.0.24'
     //动画
+    //noinspection GradleDependency
     implementation 'com.jakewharton:butterknife:8.8.1'
 
-    // skin-support 基础控件支持
+    // skin-support 基础控件支持这里不能用新版本,新版本是给androidX准备的
+    //noinspection GradleDependency
     implementation 'skin.support:skin-support:3.1.1'
-
     //视图注入
+    //noinspection GradleDependency
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //编译视图注入,效率提高
     annotationProcessor 'org.greenrobot:eventbus-annotation-processor:3.1.1'
