--- a/chunhei/build.gradle
+++ b/chunhei/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.wow.carlauncher.theme.chunhei2"
+        applicationId "com.wow.carlauncher.theme.chunhei"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
