--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -6,9 +6,9 @@ android {
         applicationId "com.wow.carlauncher"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 109
+        versionCode 2009002
         versionName "2.009"
-
+        //规则就是前4位是2.009,后面三位是小版本
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [eventBusIndex: 'com.wow.carlauncher.common.MyEventBusIndex']
