--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+*.iml
+.gradle
+release
+/local.properties
+/.idea/caches/build_file_checksums.ser
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
 .DS_Store
 .idea
 target
